# cisco-ise-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  manifest-ro.sample.yml  manifest-rw.sample.yml  manifest.sample.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  authentication.md  cloud-foundry.md  ise-permissions.md  mcp-tools.md  troubleshooting.md
src/cisco_ise_mcp/: __init__.py  audit.py  config.py  logging_config.py  oauth.py  redaction.py  responses.py  server.py  validation.py
src/cisco_ise_mcp/auth/: __init__.py  base.py  passthrough.py  service_account.py  session_store.py
src/cisco_ise_mcp/ise/: __init__.py  client.py  errors.py  ers.py  mnt.py  models.py
src/cisco_ise_mcp/tools/: __init__.py  endpoint.py  health.py  identity.py  network_device.py  policy.py  session.py  sgt.py  write_endpoint.py
tests/: test_auth_passthrough.py  test_auth_service_account.py  test_config.py  test_endpoint_tools.py  test_oauth.py  test_policy_tools.py  test_readonly_blocks_writes.py  test_redaction.py  test_session_tools.py
tests/fixtures/: endpoint_ers.json  session_mnt.xml
